Empezamos el css

--- a/Práctica WEB/Como pintar.html
+++ b/Práctica WEB/Como pintar.html
@@ -2,17 +2,20 @@
 <html lang="es">
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="General_estilos.css">
     
     <title>Cómo pintar</title>
     <nav>
       <div class="cabecera">
         <h1 class="cabecera_h1">CÓMO PINTAR</h1>
-        <ul class="cabecera_ul">
-          <li><a href="Home.html" class="cabecera_ul_l1">Inicio</a></li>
-          <li><a href="Galería.html" class="cabecera_ul_l2">Galería</a></li>
-          <li><a href="Sobre mi.html" class="cabecera_ul_l3">Sobre mi</a></li>
-          <li><a href='Como pintar.html' class="cabecera_ul_l4">Cómo pintar</a></li>
-        </ul>
+        <div class="cabecera_ul">
+          <a class="cabecera_ul_l1" href="Home.html" >Inicio</a>
+          <a class="cabecera_ul_l2" href="Galería.html" >Galería</a>
+          <a class="cabecera_ul_l3" href="Sobre mi.html">Sobre mi</a>
+          <a class="cabecera_ul_l4"href='Como pintar.html'>Cómo pintar</a>
+        </div>
       </div>
     </nav>
   </head>
