--- a/Práctica WEB/Home.html
+++ b/Práctica WEB/Home.html
@@ -3,7 +3,9 @@
 <!--  WEB SOBRE ARTE (ESTILO GALERÍA)  -->
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-    <!-- <link rel="stylesheet" type="text/css" href="home_estilos.css">  -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="General_estilos.css">
     
     <!--  Quizá un header con una imagen en grande, y que vayan cambiándose -->
     <div class="foto_rotatoria"> <!-- FOTOS QUE VAYAN ROTANDO -->  </div>
@@ -12,12 +14,12 @@
     <nav>
       <div class="cabecera">
         <h1 class="cabecera_h1" >HOME</h1>
-        <ul class="cabecera_ul">
-          <li><a class="cabecera_ul_l1" href="Home.html" >Inicio</a></li>
-          <li><a class="cabecera_ul_l2" href="Galería.html" >Galería</a></li>
-          <li><a class="cabecera_ul_l3" href="Sobre mi.html">Sobre mi</a></li>
-          <li><a  class="cabecera_ul_l4"href='Como pintar.html'>Cómo pintar</a></li>
-        </ul>
+        <div class="cabecera_ul">
+          <a class="cabecera_ul_l1" href="Home.html" >Inicio</a>
+          <a class="cabecera_ul_l2" href="Galería.html" >Galería</a>
+          <a class="cabecera_ul_l3" href="Sobre mi.html">Sobre mi</a>
+          <a class="cabecera_ul_l4"href='Como pintar.html'>Cómo pintar</a>
+        </div>
       </div>
     </nav>
   </head>
