Continuación del CSS
Al Home le queda poco por terminarlo, y el header y el footer hay que hacerlos responsive, aunque ya están hechos.

--- a/Práctica WEB/Como pintar.html
+++ b/Práctica WEB/Como pintar.html
@@ -9,7 +9,7 @@
     <title>Cómo pintar</title>
     <nav>
       <div class="cabecera">
-        <h1 class="cabecera_h1">CÓMO PINTAR</h1>
+        <a class="cabecera_inicio"href="Home.html">GaleriART</a>
         <div class="cabecera_ul">
           <a class="cabecera_ul_l1" href="Home.html" >Inicio</a>
           <a class="cabecera_ul_l2" href="Galería.html" >Galería</a>
@@ -53,7 +53,36 @@
     </div>
 
     <footer>
-      <div class="">  <!-- Info de RRSS, contador de visitas, cosas de esas --> </div>
+      <div class="f_container">
+        <div class="f_politicas">
+          <ul class="f_politicas_lista">
+            <li>Política de Privacidad</li>
+            <li>Política de Cookies</li>
+            <li>Política de Usuario</li>
+            <li>Aviso legal</li>
+          </ul>
+        </div>
+        <div class="f_redes_sociales">
+          <div class="f_redes_sociales_logo">
+            <p>GaleriART</p>
+          </div>
+  
+          <div class="f_redes_sociales_imgs">
+            <img class="f_redes_sociales_imgs_facebook" src="Cuadros\RRSS\facebook.png" width="35px" height="35px">
+            <img class="f_redes_sociales_imgs_instagram" src="Cuadros\RRSS\instagram.png" width="35px" height="35px">
+            <img class="f_redes_sociales_imgs_youtube" src="Cuadros\RRSS\youtube.png" width="35px" height="35px">
+          </div>
+  
+        </div>
+        <div class="f_contacto">
+          <ul class="f_contacto_sobremi">
+            <li>Sobre mi</li>
+            <li>Blog</li>
+            <li>Contacto</li>
+            <li>FAQs</li>
+          </ul>
+        </div>
+    </div>
     </footer>
 
   </body>
