--- a/Práctica WEB/Cuadros/Cuadro1.html
+++ b/Práctica WEB/Cuadros/Cuadro1.html
@@ -4,14 +4,14 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="General_estilos.css">
+    <link rel="stylesheet" type="text/css" href="..\General_estilos.css">
     <!-- Aquí aparecerá una foto en grande del cuadro, junto con información -->
     <!-- La que sea técnica (medidas) quizá en forma de tabla, el resto en forma de texto -->
 
     <title>Cuadro 1</title>
     <nav>
       <div class="cabecera">
-        <h1 class="cabecera_h1">COLECCIÓN 1 - CUADRO 1</h1>
+        <a class="cabecera_inicio"href="..\Home.html">GaleriART</a>
         <div class="cabecera_ul">
           <a class="cabecera_ul_l1" href="Home.html" >Inicio</a>
           <a class="cabecera_ul_l2" href="Galería.html" >Galería</a>
@@ -147,7 +147,36 @@
     </div>
 
     <footer>
-      <div class="">  <!-- Info de RRSS, contador de visitas, cosas de esas --> </div>
+      <div class="f_container">
+        <div class="f_politicas">
+          <ul class="f_politicas_lista">
+            <li>Política de Privacidad</li>
+            <li>Política de Cookies</li>
+            <li>Política de Usuario</li>
+            <li>Aviso legal</li>
+          </ul>
+        </div>
+        <div class="f_redes_sociales">
+          <div class="f_redes_sociales_logo">
+            <p>GaleriART</p>
+          </div>
+  
+          <div class="f_redes_sociales_imgs">
+            <img class="f_redes_sociales_imgs_facebook" src="Cuadros\RRSS\facebook.png" width="35px" height="35px">
+            <img class="f_redes_sociales_imgs_instagram" src="Cuadros\RRSS\instagram.png" width="35px" height="35px">
+            <img class="f_redes_sociales_imgs_youtube" src="Cuadros\RRSS\youtube.png" width="35px" height="35px">
+          </div>
+  
+        </div>
+        <div class="f_contacto">
+          <ul class="f_contacto_sobremi">
+            <li>Sobre mi</li>
+            <li>Blog</li>
+            <li>Contacto</li>
+            <li>FAQs</li>
+          </ul>
+        </div>
+    </div>
     </footer>
 
   </body>
